gccida/g0/nonoverlapping_memrefs_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2373:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2378:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2378:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2381:4: error: expected ';' after expression
rtx v11; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2381:5: error: use of undeclared identifier 'v11'; did you mean 'v10'?
rtx v11; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2380:6: note: 'v10' declared here
bool v10; // al 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2384:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2384:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2386:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2386:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2388:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2388:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2390:4: error: expected ';' after expression
rtx rtly; // [rsp+20h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2390:5: error: use of undeclared identifier 'rtly'
rtx rtly; // [rsp+20h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2391:4: error: expected ';' after expression
rtx rtlx; // [rsp+28h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2391:5: error: use of undeclared identifier 'rtlx'; did you mean 'rtx'?
rtx rtlx; // [rsp+28h] [rbp-68h] 
    ^~~~
    rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2377:5: note: 'rtx' declared here
rtx rtx; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2398:4: error: expected ';' after expression
rtx moffsety; // [rsp+60h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2398:5: error: use of undeclared identifier 'moffsety'; did you mean 'offsety'?
rtx moffsety; // [rsp+60h] [rbp-30h] 
    ^~~~~~~~
    offsety
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2396:9: note: 'offsety' declared here
__int64 offsety; // [rsp+50h] [rbp-40h] 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2399:4: error: expected ';' after expression
rtx moffsetx; // [rsp+68h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2399:5: error: use of undeclared identifier 'moffsetx'; did you mean 'offsetx'?
rtx moffsetx; // [rsp+68h] [rbp-28h] 
    ^~~~~~~~
    offsetx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/alias.c:2397:9: note: 'offsetx' declared here
__int64 offsetx; // [rsp+58h] [rbp-38h] 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonoverlapping_memrefs_p/src/obj/alias.o] Error 1
